add：パスを追加

--- a/isce2-insar/Dockerfile
+++ b/isce2-insar/Dockerfile
@@ -7,3 +7,6 @@ RUN apt update && \
 
 RUN pip install --upgrade pip setuptools && \
     pip install -r requirements.txt
+
+ENV ISCE_HOME=/usr/lib/python3.8/dist-packages/isce/
+ENV PATH=$ISCE_HOME/applications:$PATH
