add：analyze-insarを追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,15 @@ services:
       - stac-search-vscode-extensions:/root/.vscode-server/extensions/
     tty: true
 
+  analyze-insar:
+    build:
+      context: ./analyze-insar
+    volumes:
+      - ./:/workspace
+      - analyze-insar-vscode-extensions:/root/.vscode-server/extensions/
+    tty: true
+
 volumes:
   isce2-insar-vscode-extensions:
   stac-search-vscode-extensions:
+  analyze-insar-vscode-extensions:
