add：gdalの環境を構築

--- a/analyze-insar/Dockerfile
+++ b/analyze-insar/Dockerfile
@@ -1,9 +1,10 @@
-FROM python:3.11-bullseye
+FROM python:3.11-bookworm
 
 COPY requirements.txt .
 
 RUN apt update && \
-    apt install -y git
+    apt install -y git gdal-bin libgdal-dev
 
 RUN pip install --upgrade pip setuptools && \
     pip install -r requirements.txt
+RUN pip install gdal==$(gdal-config --version)
